# model-context-protocol

./: .env  .env.example  README.md  main.py  mcp.json  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  simple_streamlit.py
